# gilded-rose-with-tests

./: GildedRoseRequirements.txt  README.md  pyproject.toml  test_gilded_rose.py
